<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".quizactivity">


    <TextView
        android:id="@+id/welcometextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcometext"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/progressindicator"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/progresstext"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:max="5"
            android:progress="0"
            android:layout_weight="50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questiontitleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/questiontitle"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/questionview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/question"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:onClick="answer1function"
                android:text="@string/answer1"
                 />

            <Button
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/answer2"
                android:onClick="answer2function"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/answer3"
                android:onClick="answer3funcion"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/submit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#CFCCCC"
                android:text="@string/finalbutton"
                android:onClick="submitfunction"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
