<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headingview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/headingtext"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="140dp">

        <TextView
            android:id="@+id/entername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/enternametext"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/nametext"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/startbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="startfunction"
            android:text="@string/startbuttontext"
            android:textSize="30sp" />

    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>